--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -2,15 +2,58 @@
   background-color: var(--color-black);
 }
 
-.app_header-h1 {
+.app__header-h1 {
   font-family: var(--font-base);
   color: var(--color-golden);
+  font-weight: 700;
   letter-spacing: 0.04em;
-  text-transform: uppercase;
+  text-transform: capitalize;
   line-height: 117px;
   font-size: 90px;
 }
 
-.app_header-img {
+.app__header-img img {
   width: 80%;
+}
+
+.header__arrow-icon {
+  color: var(--color-black);
+  font-size: 3rem;
+  cursor: pointer;
+  background: var(--color-golden);
+  margin-right: 0.5rem;
+  margin-top: 70%;
+  padding: 5px;
+  transition: 0.2s;
+}
+
+.header__arrow-icon:hover {
+  color: var(--color-white);
+}
+
+@media screen and (min-width: 2000px) {
+  .app__header-h1 {
+    font-size: 180px;
+    line-height: 210px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__header-h1 {
+    font-size: 90px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__header-h1 {
+    font-size: 70px;
+    line-height: 87px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .app__header-h1 {
+    font-size: 50px;
+    line-height: 70px;
+  }
 }
