--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -42,14 +42,15 @@
   align-items: center;
 }
 
-.app__navbar-login a {
+.app__navbar-login p {
   margin: 0 1rem;
   text-decoration: none;
   transition: 0.5s ease;
 }
 
-.app__navbar-login a:hover {
+.app__navbar-login p:hover {
   border-bottom: 1px solid var(--color-golden);
+  cursor: pointer;
 }
 
 .app__navbar-login div {
