--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .app__bg {
-  background: url('./assets/bg.png');
+  background: url("./assets/bg.png");
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
@@ -54,17 +54,17 @@
 
 .custom__button {
   background-color: var(--color-crimson);
-    color: var(--color-black);
-    font-family: var(--font-base);
-    font-weight: 700;
-    letter-spacing: 0.04em;
-    line-height: 28px;
-    font-size: 16px;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1px;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  color: var(--color-black);
+  font-family: var(--font-base);
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 28px;
+  font-size: 16px;
+  padding: 0.5rem 1.5rem;
+  border-radius: 1px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .p__cormorant {
@@ -73,7 +73,7 @@
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-  font-feature-settings: 'tnum' on, 'lnum' on;
+  font-feature-settings: "tnum" on, "lnum" on;
   line-height: 29.9px;
   font-size: 23px;
 }
@@ -101,6 +101,16 @@
   width: 45px;
 }
 
+.scroll-to-top-button-div {
+  height: 110px;
+  width: 50px;
+  z-index: 20;
+  position: fixed;
+  bottom: 25px;
+  right: 35px;
+  cursor: pointer;
+}
+
 .scroll-to-top-button {
   position: fixed;
   bottom: 25px;
@@ -117,7 +127,12 @@
 
 .scroll-to-top-button::before {
   content: "";
-  background: linear-gradient(180deg,#dcca87,#dcca87,rgba(220,202,135,.84));
+  background: linear-gradient(
+    180deg,
+    #dcca87,
+    #dcca87,
+    rgba(220, 202, 135, 0.84)
+  );
   position: absolute;
   left: 24px;
   bottom: 50px;
@@ -169,13 +184,19 @@
   .section__padding {
     padding: 4rem;
   }
+  .scroll-to-top-button {
+    font-size: 20px;
+  }
+  .scroll-to-top-button::before {
+    left: 30px;
+  }
 }
 
 @media screen and (max-width: 650px) {
   .section__padding {
     padding: 4rem 2rem;
   }
-  
+
   .p__cormorant {
     font-size: 21px;
   }
