--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -41,6 +41,9 @@
   justify-content: flex-end;
   align-items: center;
 }
+.app__navbar-login-smallscreen {
+  display: none;
+}
 
 .app__navbar-login p {
   margin: 0 1rem;
@@ -125,6 +128,20 @@
 
   .app__navbar-login {
     display: none;
+  }
+
+  .app__navbar-login-smallscreen {
+    display: flex;
+    flex-direction: column;  
+  }
+
+  .app__navbar-login-smallscreen p {
+    margin: 1rem;
+    cursor: pointer;
+    color: var(--color-golden);
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--font-base);
   }
 
   .app__navbar-logo img {
