--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -47,11 +47,18 @@
 .app__user-register_p {
   color: var(--color-white);
   font-family: var(--font-base);
+  margin-top: 1rem;
 }
 
 .app__user-register_p span {
   color: var(--color-golden);
   cursor: pointer;
+}
+
+.app__user-success {
+  font-size: 15px;
+  font-weight: 600;
+  color: green;
 }
 
 @media screen and (min-width: 2000px) {
